
add_executable(algorithm_2751 algorithm/2751.cpp)
add_executable(algorithm_2557 algorithm/2557.cpp)
add_executable(algorithm_1000 algorithm/1000.cpp)
add_executable(algorithm_2558 algorithm/2558.cpp)
add_executable(algorithm_10950 algorithm/10950.cpp)
add_executable(algorithm_10951 algorithm/10951.cpp)
add_executable(algorithm_10952 algorithm/10952.cpp)
add_executable(algorithm_10953 algorithm/10953.cpp)
add_executable(algorithm_11021 algorithm/11021.cpp)
add_executable(algorithm_11022 algorithm/11022.cpp)
add_executable(algorithm_11718 algorithm/11718.cpp)
add_executable(algorithm_11719 algorithm/11719.cpp)
add_executable(algorithm_11720 algorithm/11720.cpp)
add_executable(algorithm_11721 algorithm/11721.cpp)
add_executable(algorithm_2741 algorithm/2741.cpp)
add_executable(algorithm_2742 algorithm/2742.cpp)
add_executable(algorithm_2739 algorithm/2739.cpp)
add_executable(algorithm_1924 algorithm/1924.cpp)
add_executable(algorithm_8393 algorithm/8393.cpp)
add_executable(algorithm_10818 algorithm/10818.cpp)
add_executable(algorithm_2438 algorithm/2438.cpp)
add_executable(algorithm_2439 algorithm/2439.cpp)
add_executable(algorithm_2440 algorithm/2440.cpp)
add_executable(algorithm_2441 algorithm/2441.cpp)
add_executable(algorithm_2442 algorithm/2442.cpp)
add_executable(algorithm_2445 algorithm/2445.cpp)
add_executable(algorithm_2446 algorithm/2446.cpp)
add_executable(algorithm_2522 algorithm/2522.cpp)
add_executable(algorithm_10991 algorithm/10991.cpp)
add_executable(algorithm_10992 algorithm/10992.cpp)
add_executable(algorithm_1463 algorithm/1463.cpp)